--- a/src/main/resources/templates/Albums.html
+++ b/src/main/resources/templates/Albums.html
@@ -24,19 +24,38 @@
 
     <table>
         <tr>
-            <th>Title</th>
+            <th>Album Title</th>
             <th>Artist</th>
             <th>Song Count</th>
             <th>Album Length</th>
             <th>Album Cover</th>
+            <th></th>
+            <th>Song Titles:</th>
         </tr>
 
-        <tr th:each="album : ${Albums}">
+        <tr th:if="${Albums}" th:each="album : ${Albums}">
             <td th:text="${album.title}"></td>
             <td th:text="${album.artist}"></td>
             <td th:text="${album.songCount}"></td>
             <td th:text="${album.length}"></td>
             <td><img th:src="${album.imgUrl}" alt="Song Album Picture" src=""></td>
+            <td th:each="song : ${album.songs}" th:text="${song.songTitle}"></td>
+            <td th:if="${album.songs.size() > 0}" th:text="${album.songs.get(0).songTitle}"></td>
+            <td>
+                <form th:action="'/albums/delete/' + ${album.id}" method="POST">
+                    <input type="submit" value="This album is wack">
+                </form>
+            </td>
+            <td>
+                <form action="/song" method="POST">
+                    <input type="hidden" name="albumId" th:value="${album.id}">
+                    Song : <input type="text" name="songTitle">
+                    Song Length: <input type="text" name="songLength">
+                    Track Number: <input type="number" name="trackNumber" min="1" max="50"
+                                         value="1">
+                    <input type="submit" value="Add song">
+                </form>
+            </td>
         </tr>
     </table>
 
